retest, fix jwt email logic
